--- a/packages/slack/manifest.yml
+++ b/packages/slack/manifest.yml
@@ -4,24 +4,17 @@ _metadata:
 display_information:
   name: THAAS
   description: Tom Hanks As A Service
-  # background_color: "#0000AA"
 settings:
   socket_mode_enabled: false
   org_deploy_enabled: true
-  # interactivity:
-  #   is_enabled: true
-  #   request_url: https://thaas.io/api/slack
 features:
-  # app_home:
-  #   home_tab_enabled: false
-  #   messages_tab_enabled: false
   bot_user:
     display_name: thaas
-  slash_commands: # NOTE: see https://api.slack.com/interactivity/slash-commands
+  slash_commands:
     - command: /thaas
       description: Generate an image of Tom Hanks.
       usage_hint: /thaas
-      url: https://thaas.io/api/slack
+      url: https://thaas.io/api/slack # NOTE: see https://api.slack.com/interactivity/slash-commands
 oauth_config:
   scopes:
     bot:
