try different location

--- a/action.yml
+++ b/action.yml
@@ -3,4 +3,4 @@ description: 'Tom Hanks As A Service'
 author: 'Mark Farnum'
 runs:
   using: 'node16'
-  main: 'dist/index.js'
+  main: 'packages/action/dist/index.js'
