--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,7 @@
 name: 'THAAS'
 description: 'Tom Hanks As A Service'
 author: 'Mark Farnum'
+# TODO: add inputs
 runs:
   using: 'node16'
   main: 'packages/action/dist/index.js'
