--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,13 +1,33 @@
 {
-  "name": "thaas",
-  "version": "1.1.0",
-  "description": "Tom Hanks As A Service",
-  "main": "dist/index.js",
-  "repository": "https://github.com/farkmarnum/thaas",
-  "author": "Mark Farnum",
-  "license": "MIT",
+  "name": "terraform-typescript-lambda",
+  "version": "0.0.1",
+  "description": "Minimal example for using webpack for compiling lambda functions",
   "private": true,
+  "main": "webpack.config.js",
+  "scripts": {
+    "build": "webpack --config webpack.config.js",
+    "plan": "npm run build && terraform plan",
+    "deploy": "npm run build && terraform deploy",
+    "test:watch": "jest --watch",
+    "test": "jest"
+  },
+  "author": "Julian Krispel-Samsel",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.1"
+    "@types/aws-sdk": "^2.7.0",
+    "aws-sdk": "^2.756.0",
+    "ts-loader": "^8.0.4",
+    "typescript": "^4.0.3",
+    "webpack": "^4.44.2"
+  },
+  "devDependencies": {
+    "@types/aws-lambda": "^8.10.62",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.6",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.3",
+    "ttypescript": "^1.5.12",
+    "typescript-is": "^0.16.3",
+    "webpack-cli": "^3.3.12"
   }
 }
