--- a/packages/action/package.json
+++ b/packages/action/package.json
@@ -9,6 +9,7 @@
   },
   "license": "MIT",
   "main": "lib/main.js",
+  "private": true,
   "scripts": {
     "build": "tsc",
     "format": "prettier --write '**/*.ts'",
@@ -23,11 +24,16 @@
   },
   "devDependencies": {
     "@types/node": "^16.10.5",
-    "@typescript-eslint/parser": "^5.8.1",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
     "@vercel/ncc": "^0.31.1",
-    "eslint": "^7.32.0",
+    "eslint": "^8.20.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-github": "^4.3.2",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^25.3.2",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^27.2.5",
     "js-yaml": "^4.1.0",
     "prettier": "2.5.1",
