Switch from just function to API

--- a/packages/backend/serverless.yml
+++ b/packages/backend/serverless.yml
@@ -9,5 +9,7 @@ provider:
   runtime: nodejs14.x
 
 functions:
-  hello:
-    handler: handler.hello
+  api:
+    handler: handler.handler
+    events:
+      - httpApi: '*'
