--- a/packages/backend/serverless.yml
+++ b/packages/backend/serverless.yml
@@ -4,6 +4,7 @@ service: api
 
 frameworkVersion: '3'
 
+### Lambda + API
 provider:
   name: aws
   runtime: nodejs14.x
@@ -13,3 +14,14 @@ functions:
     handler: handler.handler
     events:
       - httpApi: '*'
+
+### DNS
+plugins:
+  - serverless-domain-manager
+
+custom:
+  customDomain:
+    domainName: api.thaas.io
+    basePath: api
+    stage: prod
+    createRoute53Record: true
