--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "express": "^4.18.1",
     "serverless-http": "^3.0.1"
+  },
+  "devDependencies": {
+    "serverless-domain-manager": "^6.0.3"
   }
 }
