--- a/packages/slack/manifest.yml
+++ b/packages/slack/manifest.yml
@@ -2,7 +2,7 @@ _metadata:
   major_version: 1
   minor_version: 1
 display_information:
-  name: THAAS
+  name: thaas
   description: Tom Hanks As A Service
 settings:
   socket_mode_enabled: false
