Move backend to directory, add sls deps to root

--- a/packages/web/serverless.yml
+++ b/packages/web/serverless.yml
@@ -11,7 +11,7 @@ provider:
 
 functions:
   api:
-    handler: handler.handler
+    handler: backend/handler.handler
     events:
       - httpApi: '*'
 
