--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,19 +1,8 @@
 {
-  "name": "thaas-github-action",
-  "version": "1.1.0",
-  "description": "Tom Hanks As A Service - GitHub Action",
-  "author": "Mark Farnum",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/farkmarnum/thaas.git"
-  },
-  "license": "MIT",
+  "name": "serverless",
   "private": true,
-  "dependencies": {
-    "express": "^4.18.1",
-    "serverless-http": "^3.0.1"
-  },
   "devDependencies": {
-    "serverless-domain-manager": "^6.0.3"
+    "serverless-domain-manager": "^6.0.3",
+    "serverless-frontend-plugin": "^2.0.0"
   }
 }
