--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -2,6 +2,7 @@
   "name": "serverless",
   "private": true,
   "devDependencies": {
+    "serverless": "^3.21.0",
     "serverless-domain-manager": "^6.0.3",
     "serverless-frontend-plugin": "^2.0.0"
   }
