--- a/packages/web/serverless.yml
+++ b/packages/web/serverless.yml
@@ -17,7 +17,7 @@ functions:
 
 plugins:
   - serverless-domain-manager
-  - serverless-frontend-plugin
+  # - serverless-frontend-plugin
   - serverless-hooks
 
 custom:
