--- a/packages/web/serverless.yml
+++ b/packages/web/serverless.yml
@@ -17,7 +17,7 @@ functions:
 
 plugins:
   - serverless-domain-manager
-  # - serverless-frontend-plugin
+  - serverless-frontend-plugin
   - serverless-hooks
 
 custom:
@@ -30,13 +30,13 @@ custom:
     createRoute53IPv6Record: true
     endpointType: regional
     apiType: http
-  # serverless-frontend-plugin:
-  #   distDir: frontend/dist
-  #   build:
-  #     cwdDir: frontend
-  #     command: ['yarn', 'run', 'build']
-  #   distribution:
-  #     acmCertificateArn: arn:aws:acm:us-east-1:517918230755:certificate/a71f6489-08db-4eb5-b86f-30b7104f83f4
-  #     dnsName: thaas.io
-  #     altDnsName: www.thaas.io
-  #     hostedZoneName: thaas.io.
+  serverless-frontend-plugin:
+    distDir: frontend/dist
+    build:
+      cwdDir: frontend
+      command: ['yarn', 'run', 'build']
+    distribution:
+      acmCertificateArn: arn:aws:acm:us-east-1:517918230755:certificate/a71f6489-08db-4eb5-b86f-30b7104f83f4
+      dnsName: thaas.io
+      altDnsName: www.thaas.io
+      hostedZoneName: thaas.io.
