--- a/web/backend/package.json
+++ b/web/backend/package.json
@@ -8,5 +8,16 @@
     "url": "git+https://github.com/farkmarnum/thaas.git"
   },
   "license": "MIT",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "eslint": "^8.20.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.7.1"
+  },
+  "scripts": {
+    "lint": "eslint ."
+  }
 }
