--- a/slack/manifest.yml
+++ b/slack/manifest.yml
@@ -14,7 +14,7 @@ features:
     - command: /hanks
       description: Generate an image of Tom Hanks.
       usage_hint: /hanks
-      url: https://api.thaas.io/api/v1/integrations/slack # NOTE: see https://api.slack.com/interactivity/slash-commands
+      url: https://api.thaas.io/api/v1/integrations/slack
 oauth_config:
   scopes:
     bot:
