--- a/web/backend/package.json
+++ b/web/backend/package.json
@@ -10,14 +10,17 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "dotenv": "^16.0.1",
     "eslint": "^8.20.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "nodemon": "^2.0.19",
     "prettier": "^2.7.1"
   },
   "scripts": {
+    "start": "nodemon dev.js",
     "lint": "eslint ."
   },
   "dependencies": {
