--- a/github/package.json
+++ b/github/package.json
@@ -1,6 +1,9 @@
 {
   "name": "thaas-github-app",
   "version": "0.1.0",
+  "engines": {
+    "node": ">= 10.13.0"
+  },
   "description": "Tom Hanks As A Service - GitHub App",
   "author": "Mark Farnum",
   "repository": {
@@ -9,8 +12,19 @@
   },
   "license": "MIT",
   "private": true,
-  "devDependencies": {},
+  "scripts": {
+    "build": "tsc",
+    "start": "probot run ./lib/index.js"
+  },
+  "devDependencies": {
+    "@types/node": "^18.6.4",
+    "@types/node-fetch": "2",
+    "nock": "^13.2.9",
+    "smee-client": "^1.2.3",
+    "typescript": "^4.7.4"
+  },
   "dependencies": {
+    "node-fetch": "2",
     "probot": "^12.2.5"
   }
 }
