--- a/github/package.json
+++ b/github/package.json
@@ -14,7 +14,7 @@
   "private": true,
   "scripts": {
     "build": "tsc",
-    "start": "probot run ./lib/index.js"
+    "start": "yarn build && probot run ./lib/index.js"
   },
   "devDependencies": {
     "@types/node": "^18.6.4",
