--- a/web/backend/package.json
+++ b/web/backend/package.json
@@ -27,6 +27,7 @@
     "@slack/oauth": "^2.5.4",
     "@vendia/serverless-express": "^4.10.1",
     "aws-sdk": "^2.1185.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "lowercase-keys": "^3.0.0"
   }
 }
