Add endpoint for marketplace, update description in manifest

--- a/github/app.yml
+++ b/github/app.yml
@@ -42,4 +42,4 @@ name: tom-hanks-as-a-service
 url: https://thaas.io
 
 # A description of the GitHub App.
-description: Tom Hanks As A Service
+description: It should be possible to summon a picture of Tom Hanks on any platform just by typing a single command.
