--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,15 +1,16 @@
 {
   "compilerOptions": {
-      "strict": true,
-      "outDir": "dist",
-      "target": "es2016",
-      "module": "commonjs",
-      "moduleResolution": "node",
-      "sourceMap": true,
-      "experimentalDecorators": true,
-      "pretty": true,
-      "noFallthroughCasesInSwitch": true,
-      "noImplicitReturns": true,
-      "forceConsistentCasingInFileNames": true
+    "outDir": "bin",
+    "target": "es2016",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "experimentalDecorators": true,
+    "pretty": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "forceConsistentCasingInFileNames": true,
+    "strictNullChecks": true
   }
 }
