Fix linting, move files

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -12,5 +12,8 @@
     "noImplicitReturns": true,
     "forceConsistentCasingInFileNames": true,
     "strictNullChecks": true
-  }
+  },
+  "include": [
+    "src"
+  ]
 }
