--- a/api/package.json
+++ b/api/package.json
@@ -10,11 +10,11 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "lint": "eslint"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@pulumi/aws": "^5.10.0",
-    "@pulumi/aws-apigateway": "^0.0.11",
+    "@pulumi/awsx": "^0.40.0",
     "@pulumi/pulumi": "^3.37.2",
     "aws-lambda": "^1.0.7"
   },
@@ -23,8 +23,14 @@
     "@types/node": "^18.7.3",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
-    "eslint": "^8.21.0",
+    "aws-sdk": "^2.1194.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "prettier": "^2.7.1"
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.7.1",
+    "typescript": "^4.7.4"
   }
 }
