--- a/api/package.json
+++ b/api/package.json
@@ -16,7 +16,9 @@
     "@pulumi/aws": "^5.10.0",
     "@pulumi/awsx": "^0.40.0",
     "@pulumi/pulumi": "^3.37.2",
-    "aws-lambda": "^1.0.7"
+    "@slack/oauth": "^2.5.4",
+    "aws-lambda": "^1.0.7",
+    "probot": "^12.2.5"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.102",
