--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "tc": "tsc --noEmit"
   },
   "dependencies": {
     "@pulumi/aws": "^5.10.0",
