--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,10 +6,6 @@ on:
       - main
   workflow_dispatch:
 
-env:
-  DOMAIN: thaas.io
-  SERVICE: thaas
-
 jobs:
   deploy:
     name: Deploy infrastructure
@@ -32,25 +28,7 @@ jobs:
 
       - uses: pulumi/actions@v3
         with:
-          command: preview
+          command: up
           stack-name: prod
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
-
-      # - name: Terraform
-      #   working-directory: terraform
-      #   env:
-      #     TF_VAR_domain: ${{ env.DOMAIN }}
-      #     TF_VAR_service: ${{ env.SERVICE }}
-      #     TF_VAR_SLACK_CLIENT_ID: ${{ secrets.SLACK_CLIENT_ID }}
-      #     TF_VAR_SLACK_CLIENT_SECRET: ${{ secrets.SLACK_CLIENT_SECRET }}
-      #     TF_VAR_SLACK_STATE_SECRET: ${{ secrets.SLACK_STATE_SECRET }}
-      #     TF_VAR_alarm_email: ${{ secrets.ALARM_EMAIL }}
-      #     TF_VAR_GH_APP_APP_ID: ${{ secrets.GH_APP_APP_ID }}
-      #     TF_VAR_GH_APP_PRIVATE_KEY: ${{ secrets.GH_APP_PRIVATE_KEY }}
-      #     TF_VAR_GH_APP_WEBHOOK_SECRET: ${{ secrets.GH_APP_WEBHOOK_SECRET }}
-      #   run: |
-      #     terraform init
-      #     terraform validate -no-color
-      #     terraform plan -no-color
-      #     terraform apply -auto-approve
