Just do it the easy way

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -15,7 +15,8 @@
     "skipLibCheck": true
   },
   "include": [
-    "src",
-    "index.ts"
+    "src/**/*.ts",
+    "index.ts",
+    "global.d.ts"
   ]
 }
