--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
     "@vendia/serverless-express": "^4.10.1",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1194.0",
+    "express": "^4.18.1",
     "probot": "^12.2.5"
   },
   "devDependencies": {
