--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -15,8 +15,7 @@
     "skipLibCheck": true
   },
   "include": [
-    "src/**/*.ts",
-    "index.ts",
-    "global.d.ts"
+    "src",
+    "index.ts"
   ]
 }
