--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,14 +37,9 @@ jobs:
 
       - uses: pulumi/actions@v3
         with:
-          command: refresh
-          stack-name: prod
-        env:
-          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
-
-      - uses: pulumi/actions@v3
-        with:
           command: preview # TODO: change to 'up'
+          refresh: true
           stack-name: prod
+          work-dir: ./api
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
