--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,9 +39,10 @@ jobs:
 
       - uses: pulumi/actions@v3
         with:
+          work-dir: ./api
           command: preview # TODO: change to 'up'
           refresh: true
           stack-name: prod
-          work-dir: ./api
+          secrets-provider: default
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
