--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,11 @@ on:
       - pulumi
       - main
 
+env:
+  AWS_REGION: us-east-1
+  SERVICE: thaas
+  DOMAIN: thaas.io
+
 jobs:
   deploy:
     name: Deploy infrastructure
@@ -29,7 +34,7 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-region: us-east-1
+          aws-region: ${{ env.AWS_REGION }}
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
@@ -43,6 +48,18 @@ jobs:
           command: preview # TODO: change to 'up'
           refresh: true
           stack-name: prod
-          secrets-provider: default
+          config-map: |
+            {
+              "aws:region": {          value: "${{ env.AWS_REGION }}",                secret: false },
+              DOMAIN: {                value: "${{ env.DOMAIN }}",                    secret: false },
+              SERVICE: {               value: "${{ env.SERVICE }}",                   secret: false },
+              ALARM_EMAIL: {           value: "${{ secrets.ALARM_EMAIL }}",           secret: true },
+              GH_APP_APP_ID: {         value: "${{ secrets.GH_APP_APP_ID }}",         secret: true },
+              GH_APP_PRIVATE_KEY: {    value: "${{ secrets.GH_APP_PRIVATE_KEY }}",    secret: true },
+              GH_APP_WEBHOOK_SECRET: { value: "${{ secrets.GH_APP_WEBHOOK_SECRET }}", secret: true },
+              SLACK_CLIENT_ID: {       value: "${{ secrets.SLACK_CLIENT_ID }}",       secret: true },
+              SLACK_CLIENT_SECRET: {   value: "${{ secrets.SLACK_CLIENT_SECRET }}",   secret: true },
+              SLACK_STATE_SECRET: {    value: "${{ secrets.SLACK_STATE_SECRET }}",    secret: true }
+            }
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
